--- a/pages/app.css
+++ b/pages/app.css
@@ -13,6 +13,10 @@ body {
     width: 100%;
 }
 
+.nav li:first-child {
+    display: none;
+}
+
 .nav>ul {
     margin: 0;
     padding: 0;
@@ -86,6 +90,7 @@ body {
 
 .nav>ul ul {
     background-color: #20639b;
+    z-index: 1;
 }
 
 .main {
@@ -114,4 +119,148 @@ code {
 img {
     max-width: 100%;
     height: auto;
+}
+
+
+/* ————————————————————–
+  Tree core styles
+*/
+
+.tree>ul {
+    margin: 1em;
+}
+
+.tree>ul input {
+    position: absolute;
+    clip: rect(0, 0, 0, 0);
+}
+
+.tree>ul input~ul {
+    display: none;
+}
+
+.tree>ul input:checked~ul {
+    display: block;
+}
+
+
+/* ————————————————————–
+  Tree rows
+*/
+
+.tree>ul li {
+    line-height: 1.2;
+    position: relative;
+    padding: 0 0 1em 1em;
+}
+
+.tree>ul ul li {
+    padding: 1em 0 0 1em;
+}
+
+.tree>ul>li:last-child {
+    padding-bottom: 0;
+}
+
+
+/* ————————————————————–
+  Tree labels
+*/
+
+.tree_label {
+    position: relative;
+    display: inline-block;
+    background: #fff;
+}
+
+label.tree_label {
+    cursor: pointer;
+}
+
+label.tree_label:hover {
+    color: #666;
+}
+
+
+/* ————————————————————–
+  Tree expanded icon
+*/
+
+label.tree_label:before {
+    background: #000;
+    color: #fff;
+    position: relative;
+    z-index: 1;
+    float: left;
+    margin: 0 1em 0 -2em;
+    width: 1em;
+    height: 1em;
+    border-radius: 1em;
+    content: '+';
+    text-align: center;
+    line-height: .9em;
+}
+
+:checked~label.tree_label:before {
+    content: '–';
+}
+
+
+/* ————————————————————–
+  Tree branches
+*/
+
+.tree>ul li:before {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: -.5em;
+    display: block;
+    width: 0;
+    border-left: 1px solid #777;
+    content: "";
+}
+
+.tree_label:after {
+    position: absolute;
+    top: 0;
+    left: -1.5em;
+    display: block;
+    height: 0.5em;
+    width: 1em;
+    border-bottom: 1px solid #777;
+    border-left: 1px solid #777;
+    border-radius: 0 0 0 .3em;
+    content: '';
+}
+
+label.tree_label:after {
+    border-bottom: 0;
+}
+
+:checked~label.tree_label:after {
+    border-radius: 0 .3em 0 0;
+    border-top: 1px solid #777;
+    border-right: 1px solid #777;
+    border-bottom: 0;
+    border-left: 0;
+    bottom: 0;
+    top: 0.5em;
+    height: auto;
+}
+
+.tree>ul li:last-child:before {
+    height: 1em;
+    bottom: auto;
+}
+
+.tree>ul>li:last-child:before {
+    display: none;
+}
+
+.tree_custom {
+    display: block;
+    background: #eee;
+    padding: 1em;
+    border-radius: 0.3em;
 }
