--- a/pages/app.css
+++ b/pages/app.css
@@ -1,124 +1,13 @@
-body {
-    background-color: #3caea3;
+/* ————————————————————–
+    Tree branches
+  */
+
+.tree ul {
+    padding: 0px;
 }
 
-.header {
-    background-color: #173F5F;
-    display: flex;
-    align-items: center;
-    box-shadow: 0 1px 0 rgba(12, 13, 14, 0.15);
-}
-
-.nav {
-    width: 100%;
-}
-
-.nav li:first-child {
-    display: none;
-}
-
-.nav>ul {
-    margin: 0;
-    padding: 0;
+.tree li {
     list-style: none;
-    width: 100%;
-    text-align: center;
-}
-
-.nav>ul ul {
-    min-width: 150px;
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    position: absolute;
-    top: -999em;
-    left: -999em;
-}
-
-.nav>ul li {
-    display: inline-block;
-    position: relative;
-    text-align: left;
-}
-
-.nav>ul li.focus>ul,
-.nav>ul li:hover>ul {
-    top: auto;
-    left: auto;
-}
-
-.nav>ul li li {
-    display: block;
-}
-
-.nav>ul li li.focus>ul,
-.nav>ul li li:hover>ul {
-    left: 100%;
-    top: 0;
-}
-
-.nav>ul a {
-    color: #fff;
-    text-decoration: none;
-    display: block;
-    white-space: nowrap;
-    padding: 10px 15px;
-}
-
-.nav>ul a:hover,
-.nav>ul li:hover>a,
-.nav>ul .current-menu-item>a,
-.nav>ul .current-menu-ancestor>a {
-    color: #f6d55c;
-}
-
-.nav>ul .menu-item-has-children>a::before {
-    content: "";
-    position: absolute;
-    right: 0;
-    top: 50%;
-    transform: translateY(-50%);
-    border: 4px solid transparent;
-    border-top-color: currentColor;
-}
-
-.nav>ul ul .menu-item-has-children>a::before {
-    right: 2px;
-    border-top-color: transparent;
-    border-left-color: currentColor;
-}
-
-.nav>ul ul {
-    background-color: #20639b;
-    z-index: 1;
-}
-
-.main {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.content {
-    width: calc(100% - 300px - 24px);
-    padding: 0px 15px 0px;
-}
-
-pre {
-    overflow-x: auto;
-    background-color: #ed553b
-}
-
-code {
-    font-size: 85%;
-    border-radius: 3px;
-    font-family: "Source Code Pro", Consolas, Menlo, monospace;
-    background-color: #ed553b
-}
-
-img {
-    max-width: 100%;
-    height: auto;
 }
 
 
@@ -126,20 +15,20 @@ img {
   Tree core styles
 */
 
-.tree>ul {
+.tree {
     margin: 1em;
 }
 
-.tree>ul input {
+.tree input {
     position: absolute;
     clip: rect(0, 0, 0, 0);
 }
 
-.tree>ul input~ul {
+.tree input~ul {
     display: none;
 }
 
-.tree>ul input:checked~ul {
+.tree input:checked~ul {
     display: block;
 }
 
@@ -148,17 +37,17 @@ img {
   Tree rows
 */
 
-.tree>ul li {
+.tree li {
     line-height: 1.2;
     position: relative;
     padding: 0 0 1em 1em;
 }
 
-.tree>ul ul li {
+.tree ul li {
     padding: 1em 0 0 1em;
 }
 
-.tree>ul>li:last-child {
+.tree>li:last-child {
     padding-bottom: 0;
 }
 
@@ -210,7 +99,7 @@ label.tree_label:before {
   Tree branches
 */
 
-.tree>ul li:before {
+.tree li:before {
     position: absolute;
     top: 0;
     bottom: 0;
@@ -249,12 +138,12 @@ label.tree_label:after {
     height: auto;
 }
 
-.tree>ul li:last-child:before {
+.tree li:last-child:before {
     height: 1em;
     bottom: auto;
 }
 
-.tree>ul>li:last-child:before {
+.tree>li:last-child:before {
     display: none;
 }
 
