--- a/components/Posts/Posts.scss
+++ b/components/Posts/Posts.scss
@@ -1,24 +1,21 @@
 .posts {
-  max-width: 768px;
-  margin: auto;
-  &__load-more {
-    display: flex;
-    align-items: center;
-  }
+  background-color: var(--color-background);
   h2 {
     text-align: center;
   }
   ul {
+    display: grid;
+    row-gap: 1rem;
     list-style: none;
     padding: 0;
     margin: 0;
     li {
-      padding: 1.75rem 0;
+      border-top: 1px solid var(--color-accent);
+      padding-top: 1rem;
+      &:first-child {
+        border-top: none;
+        padding-top: 0rem;
+      }
     }
-  }
-  background-color: pink;
-  color: blue;
-  a {
-    color: red;
   }
 }
