--- a/components/PostCard/PostCard.scss
+++ b/components/PostCard/PostCard.scss
@@ -7,8 +7,10 @@
   &__title {
     font-size: 1.6rem;
     margin: 1rem 0rem 0.8rem;
+    letter-spacing: 0.1rem;
   }
   &__summary {
     font-size: 1rem;
+    letter-spacing: 0.05rem;
   }
 }
