--- a/components/Posts/Posts.scss
+++ b/components/Posts/Posts.scss
@@ -2,19 +2,35 @@
   background-color: var(--color-background);
   h2 {
     text-align: center;
+    font-size: 2.5rem;
+    letter-spacing: 0.05rem;
   }
   ul {
     display: grid;
-    row-gap: 1rem;
+    row-gap: 2rem;
     list-style: none;
     padding: 0;
-    margin: 0;
+    margin: 0 0 2rem 0;
     li {
       border-top: 1px solid var(--color-accent);
       padding-top: 1rem;
       &:first-child {
         border-top: none;
         padding-top: 0rem;
+      }
+    }
+  }
+  &__load-more {
+    display: flex;
+    justify-content: center;
+    button {
+      padding: 16px 32px;
+      margin: 4px 2px 25px;
+      transition: 0.3s;
+      cursor: pointer;
+      opacity: 0.8;
+      &:hover {
+        opacity: 1;
       }
     }
   }
