--- a/components/MenuTreeSideBar/Menu.scss
+++ b/components/MenuTreeSideBar/Menu.scss
@@ -22,6 +22,9 @@
 .tree input {
   position: absolute;
   clip: rect(0, 0, 0, 0);
+  height: 1rem;
+  top: 0;
+  left: -1rem;
 }
 
 .tree input~ul {
